--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,11 @@ apply plugin: "com.android.library"
 
 android {
     namespace "com.cubicphuse.RCTTorch"
-    compileSdkVersion 34
+    compileSdkVersion rootProject.hasProperty('compileSdkVersion') ? rootProject.compileSdkVersion : 34
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 34
+        minSdkVersion rootProject.hasProperty('minSdkVersion') ? rootProject.minSdkVersion : 21
+        targetSdkVersion rootProject.hasProperty('targetSdkVersion') ? rootProject.targetSdkVersion : 34
     }
 
     sourceSets {
@@ -16,7 +16,6 @@ android {
         }
     }
 }
-
 
 dependencies {
     implementation "com.facebook.react:react-android"
